@@ -1,3 +1,7 @@
+2011-09-16  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Fix: crash when `mode-line-format' is not a list.
+
 2011-09-15  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Improve: colorize status.
